2003-11-16  MenTaLguY <mental@rydia.net>

	* New version code (version.c/version.h)
	* Introduced inkscape namespace in parallel with sodipodi namespace
	* Fixed a lot of attribute enum names to reflect sodipodi versus inkscape namespaces
	* src/document.c: new version processing, plus namespace fixes
	* SP_OBJECT_WRITE_INKSCAPE is now SP_OBJECT_WRITE_EXT
	* Inkscape and Sodipodi versions are tracked separately
	* First crack at layers!  set inkscape:groupmode to "layer" or "group" depending on how you want a group to behave
	* A little dead code removal

2003-11-15  MenTaLguY <mental@rydia.net>

	* Mege Jon's improved src/help.c patch from the mailing list (with some temporary cruft of my own that I hope he'll forgive me for)

2003-11-14  Ted Gould <ted@gould.cx>

	* Fixed up the module code alot.  Now extentions are usable with
	  a XML file in the /usr/share/inkscape/modules directory.

2003-11-12  Jon Cruz <jon@joncruz.org>
	* Fix warnings due to missing casts - nr-rasterfont.c (840539)
	* Fix warnings due to missing casts - desktop-snap.c (840543)
	* Fix warnings due to missing casts - help.c (840545)

2003-11-11  Robert Crosbie <swingincelt@hotmail.com>

	* Remove kde option from configure (840504)
	* Remove icon hash from sp_icon_new_full (840506)
	
2003-11-11  magnethead <magnethead@mindspring.com>

	* src/dialogs/transformation.c (sp_transformation_dialog_new):
	  Removed images from tabs
	* src/dialogs/object-properties.c (sp_object_properties_dialog):
	  Removed images from tabs

2003-11-11  Ted Gould <ted@gould.cx>

	* Starting 0.36 development

2003-11-10  Ted Gould <ted@gould.cx>

	* Release 0.35

2003-11-08  Bryce Harrington <brycehar@bryceharrington.com>
	* Updated About dialog
	* Fixed bug on Editing Windows dialog

2003-11-08  Manny the Gnome
	* Remove KDE dialog option

2003-11-06 Bulia Byak
	* Add cursor-key support

2003-10-19  MenTaLguY  <mental@rydia.net>

	* src/xml/repr-io.c (sp_repr_svg_read_node): handle CDATA
	  sections properly
