@@ -24,6 +24,7 @@
 #include <gtk/gtk.h>
 #include "desktop-events.h"
 #include "desktop.h"
+#include "inkscape-private.h"
 
 #include "dialog-events.h"
 
@@ -73,7 +74,7 @@ sp_dialog_event_handler (GtkWindow *win, GdkEvent *event, gpointer data)
 			break;
 		default: // pass keypress to the canvas
 			if (w = gtk_window_get_transient_for ((GtkWindow *) win)) {
-				dtw = g_object_get_data (G_OBJECT (w), "desktopwidget");
+				dtw = (SPDesktopWidget *)g_object_get_data (G_OBJECT (w), "desktopwidget");
 				inkscape_activate_desktop (dtw->desktop);
 				gtk_propagate_event (GTK_WIDGET (dtw->canvas), event);
 				ret = TRUE; 
