@@ -39,6 +39,7 @@ void inkscape_eventcontext_set (SPEventContext * eventcontext);
 void inkscape_add_desktop (SPDesktop * desktop);
 void inkscape_remove_desktop (SPDesktop * desktop);
 void inkscape_activate_desktop (SPDesktop * desktop);
+void inkscape_reactivate_desktop (SPDesktop * desktop);
 void inkscape_add_document (SPDocument *document);
 void inkscape_remove_document (SPDocument *document);
 
